devices/MRE_Controller_Data_Package/WIN64/MT_API.h

#define MT_API extern "C" __declspec( dllexport )
#define MT_API __declspec( dllexport )
//设置直线插补急停
MT_API int32_t __stdcall MT_Set_Axis_Line_Halt(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Halt(int32_t ADev,uint16_t AObj);
//设置直线插补相对移动目标
MT_API int32_t __stdcall MT_Set_Axis_Line_Rel(uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Rel(int32_t ADev,uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
//设置直线插补绝对移动目标
MT_API int32_t __stdcall MT_Set_Axis_Line_Abs(uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Abs(int32_t ADev,uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
//设置直线插补启动
MT_API int32_t __stdcall MT_Set_Axis_Line_Run_Rel(uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Run_Rel(int32_t ADev,uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_Set_Axis_Line_Run_Abs(uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
MT_API int32_t __stdcall MT_M_Set_Axis_Line_Run_Abs(int32_t ADev,uint16_t AObj,int32_t Axis_Target0,int32_t Axis_Target1);
//读取直线插补模块
MT_API int32_t __stdcall MT_Get_Axis_Line_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_Num(int32_t ADev,int32_t* pValue);
//插补运动状态
MT_API int32_t __stdcall MT_Get_Axis_Line_Status(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_Status(int32_t ADev,uint16_t AObj,int32_t* pValue);
//插补轴
MT_API int32_t __stdcall MT_Get_Axis_Line_Axis(uint16_t AObj,int32_t* pID0,int32_t* pID1);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_Axis(int32_t ADev,uint16_t AObj,int32_t* pID0,int32_t* pID1);
//插补加速度
MT_API int32_t __stdcall MT_Get_Axis_Line_Acc(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_Acc(int32_t ADev,uint16_t AObj,int32_t* pValue);
//插补减速度
MT_API int32_t __stdcall MT_Get_Axis_Line_Dec(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_Dec(int32_t ADev,uint16_t AObj,int32_t* pValue);
//插补速度
MT_API int32_t __stdcall MT_Get_Axis_Line_V(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Line_V(int32_t ADev,uint16_t AObj,int32_t* pValue);
//====================================================================
//AD输入
//======================================================================
//通道数
MT_API int32_t __stdcall MT_Get_AD_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_AD_Num(int32_t ADev,int32_t* pValue);
//读取单通道值
MT_API int32_t __stdcall MT_Get_AD_Data(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_AD_Data(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Board_T(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Board_T(int32_t ADev,int32_t* pValue);
//2020 01 05 外部温度传感器
MT_API int32_t __stdcall MT_Get_T_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_T_Num(int32_t ADev,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_T_Float(uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_M_Get_T_Float(int32_t ADev,uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_Get_T(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_T(int32_t ADev,uint16_t AObj,int32_t* pValue);
//2020 01 05 PWM设置
MT_API int32_t __stdcall MT_Get_PWM_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM_Num(int32_t ADev,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_PWM_F(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_PWM_F(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_PWM_F(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM_F(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_PWM_F_Float(uint16_t AObj,float Value);
MT_API int32_t __stdcall MT_M_Set_PWM_F_Float(int32_t ADev,uint16_t AObj,float Value);
MT_API int32_t __stdcall MT_Get_PWM_F_Float(uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM_F_Float(int32_t ADev,uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_Set_PWM01(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_PWM01(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_PWM01(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM01(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_PWM001(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_PWM001(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_PWM001(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM001(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Set_PWM_Float(uint16_t AObj,float Value);
MT_API int32_t __stdcall MT_M_Set_PWM_Float(int32_t ADev,uint16_t AObj,float Value);
MT_API int32_t __stdcall MT_Get_PWM_Float(uint16_t AObj,float* pValue);
MT_API int32_t __stdcall MT_M_Get_PWM_Float(int32_t ADev,uint16_t AObj,float* pValue);
//================================================================
//圆弧插补
//================================================================
//设置圆弧插补主轴及速度
MT_API int32_t __stdcall MT_Set_Axis_Circle_Axis(uint16_t AObj,int32_t Axis_ID0,int32_t Axis_ID1);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_Axis(int32_t ADev,uint16_t AObj,int32_t Axis_ID0,int32_t Axis_ID1);
//设置圆弧插补加速度
MT_API int32_t __stdcall MT_Set_Axis_Circle_Acc(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_Acc(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补减速度
MT_API int32_t __stdcall MT_Set_Axis_Circle_Dec(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_Dec(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补速度
MT_API int32_t __stdcall MT_Set_Axis_Circle_V(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Circle_V(int32_t ADev,uint16_t AObj,int32_t Value);
//设置圆弧插补启动 顺时钟  圆心坐标模式
MT_API int32_t __stdcall MT_Set_Axis_Circle_R_CW_Run_Rel(uint16_t AObj,int32_t AR,int32_t Axis_Target0,int32_t Axis_Target1);